<resources>
    <string name="app_name">EcommerceShop</string>
    <string name="button_shop_favourite">Hủy theo dõi</string>
    <string name="checkbox_address">Use as the shipping address</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="sign_up_account">Sign up account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="term_service_1">Chào mừng bạn đến với SmartShop qua giao diện ứng dụng di động. Trước khi sử dụng SmartShop hoặc tạo tài khoản SmartShop (Tài Khoản), vui lòng đọc kỹ các Điều Khoản Dịch Vụ dưới đây và Quy Chế Hoạt Động Sàn Giao Dịch Thương Mại Điện Tử SmartShop để hiểu rõ quyền lợi và nghĩa vụ hợp pháp của mình đối với Công ty TNHH SmartShop và các công ty liên kết và công ty con của SmartShop (sau đây được gọi riêng là SmartShop, gọi chung là chúng tôi, của chúng tôi). “Dịch Vụ” chúng tôi cung cấp hoặc sẵn có bao gồm:</string>
    <string name="term_service_1_1">(a) Ứng dụng SmartShop</string>
    <string name="term_service_1_2">(b) Các dịch vụ được cung cấp bởi SmartShop và bởi phần mềm dành cho khách hàng của SmartShop có sẵn trên ứng dụng SmartShop.</string>
    <string name="term_service_1_3">(c) Tất cả các thông tin, đường dẫn, tính năng, dữ liệu, văn bản, hình ảnh, biểu đồ, âm nhạc, âm thanh, video (bao gồm cả các đoạn video được đăng tải trực tiếp theo thời gian thực (livestream)), tin nhắn, tags, nội dung, chương trình, phần mềm, ứng dụng dịch vụ (bao gồm bất kỳ ứng dụng dịch vụ di động nào) hoặc các tài liệu khác có sẵn trên ứng dụng SmartShop hoặc các dịch vụ liên quan đến ứng dụng SmartShop (Nội Dung). Bất kỳ tính năng mới nào được bổ sung hoặc mở rộng đối với Dịch Vụ đều thuộc phạm vi điều chỉnh của Điều Khoản Dịch Vụ này. Điều Khoản Dịch Vụ này điều chỉnh việc bạn sử dụng Dịch Vụ cung cấp bởi SmartShop.</string>
    <string name="term_service_1_4">Trước khi trở thành Người Sử Dụng của ứng dụng SmartShop, bạn cần đọc và chấp nhận mọi điều khoản và điều kiện được quy định trong, và dẫn chiếu đến, Điều Khoản Dịch Vụ này và Chính Sách Bảo Mật được dẫn chiếu theo đây.</string>
    <string name="term_service_1_5">SmartShop bảo lưu quyền thay đổi, chỉnh sửa, tạm ngưng hoặc chấm dứt tất cả hoặc bất kỳ phần nào của ứng dụng SmartShop hoặc Dịch Vụ vào bất cứ thời điểm nào theo quy định pháp luật. Phiên Bản thử nghiệm của Dịch Vụ hoặc tính năng của Dịch Vụ có thể không hoàn toàn giống với phiên bản cuối cùng.</string>
    <string name="term_service_1_6">SmartShop bảo lưu quyền từ chối yêu cầu mở Tài Khoản hoặc các truy cập của bạn tới ứng dụng SmartShop hoặc Dịch Vụ theo quy định pháp luật và Điều khoản dịch vụ.</string>
    <string name="term_service_">1. GIỚI THIỆU</string>
    <string name="term_service__">2. QUYỀN RIÊNG TƯ</string>
    <string name="term_service_2">SmartShop coi trọng việc bảo mật thông tin của bạn. Để bảo vệ quyền lợi người dùng, SmartShop cung cấp Chính Sách Bảo Mật tại SmartShop.vn để giải thích chi tiết các hoạt động bảo mật của SmartShop. Vui lòng tham khảo Chính Sách Bảo Mật để biết cách thức SmartShop thu thập và sử dụng thông tin liên quan đến Tài Khoản và/hoặc việc sử dụng Dịch Vụ của Người Sử Dụng (Thông Tin Người Sử Dụng). Điều Khoản Dịch Vụ này có liên quan mật thiết với Chính Sách Bảo Mật. Bằng cách sử dụng Dịch Vụ hoặc cung cấp thông tin trên SmartShop, Người Sử Dụng:</string>
    <string name="term_service_2_1">(a) Cho phép SmartShop thu thập, sử dụng, công bố và/hoặc xử lý các Nội Dung, dữ liệu cá nhân của bạn và Thông Tin Người Sử Dụng như được quy định trong Chính Sách Bảo Mật.</string>
    <string name="term_service_2_2">(b) Đồng ý và công nhận rằng các thông tin được cung cấp trên Trang SmartShop sẽ thuộc sở hữu chung của bạn và SmartShop và sẽ không, dù là trực tiếp hay gián tiếp, tiết lộ các Thông Tin Người Sử Dụng cho bất kỳ bên thứ ba nào, hoặc bằng bất kỳ phương thức nào cho phép bất kỳ bên thứ ba nào được truy cập hoặc sử dụng Thông Tin Người Dùng của bạn.</string>
    <string name="term_service_2_3">Trường hợp Người Sử Dụng sở hữu dữ liệu cá nhân của Người Sử Dụng khác thông qua việc sử dụng Dịch Vụ (Bên Nhận Thông Tin) theo đây đồng ý rằng, mình sẽ (i) tuân thủ mọi quy định pháp luật về bảo vệ an toàn thông tin cá nhân liên quan đến những thông tin đó; (ii) cho phép Người Sử Dụng là chủ sở hữu của các thông tin cá nhân mà Bên Nhận Thông Tin thu thập được (Bên Tiết Lộ Thông Tin) được phép xóa bỏ thông tin của mình được thu thập từ cơ sở dữ liệu của Bên Nhận Thông Tin; và (iii) cho phép Bên Tiết Lộ Thông Tin rà soát những thông tin đã được thu thập về họ bởi Bên Nhận Thông Tin, phù hợp với hoặc theo yêu cầu của các quy định pháp luật hiện hành.</string>
    <string name="term_service___">3. GIỚI HẠN TRÁCH NHIỆM</string>
    <string name="term_service_3">SmartShop trao cho Người Sử Dụng quyền phù hợp để truy cập và sử dụng các Dịch Vụ theo các điều khoản và điều kiện được quy định trong Điều Khoản Dịch Vụ này. Tất cả các Nội Dung, thương hiệu, nhãn hiệu dịch vụ, tên thương mại, biểu tượng và tài sản sở hữu trí tuệ khác độc quyền (Tài Sản Sở Hữu Trí Tuệ) hiển thị trên Trang SmartShop đều thuộc sở hữu của SmartShop và bên sở hữu thứ ba, nếu có. Không một bên nào truy cập vào Trang SmartShop được cấp quyền hoặc cấp phép trực tiếp hoặc gián tiếp để sử dụng hoặc sao chép bất kỳ Tài Sản Sở Hữu Trí Tuệ nào, cũng như không một bên nào truy cập vào Trang SmartShop được phép truy đòi bất kỳ quyền, quyền sở hữu hoặc lợi ích nào liên quan đến Tài Sản Sở Hữu Trí Tuệ. Bằng cách sử dụng hoặc truy cập Dịch Vụ, bạn đồng ý tuân thủ các quy định pháp luật liên quan đến bản quyền, thương hiệu, nhãn hiệu dịch vụ hoặc bất cứ quy định pháp luật nào khác bảo vệ Dịch Vụ, Trang SmartShop và Nội Dung của Trang SmartShop. Bạn đồng ý không được phép sao chép, phát tán, tái bản, chuyển giao, công bố công khai, thực hiện công khai, sửa đổi, phỏng tác, cho thuê, bán, hoặc tạo ra các sản phẩm phái sinh của bất cứ phần nào thuộc Dịch Vụ, Trang SmartShop và Nội Dung của Trang SmartShop. Bạn không được nhân bản hoặc chỉnh sửa bất kỳ phần nào hoặc toàn bộ nội dung của Trang SmartShop trên bất kỳ máy chủ hoặc như là một phần của bất kỳ website nào khác mà chưa nhận được sự chấp thuận bằng văn bản của SmartShop. Ngoài ra, bạn đồng ý rằng bạn sẽ không sử dụng bất kỳ robot, chương trình do thám (spider) hay bất kỳ thiết bị tự động hoặc phương thức thủ công nào để theo dõi hoặc sao chép Nội Dung của SmartShop khi chưa có sự đồng ý trước bằng văn bản của.</string>
    <string name="term_service_3_1">SmartShop cho phép kết nối từ website Người Sử Dụng đến Trang SmartShop, với điều kiện Người Sử Dụng không được hiểu là bất kỳ việc xác nhận hoặc liên quan nào đến SmartShop.</string>
</resources>