<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".tinh.Fragment.ReturnAndRefundPolicy">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CHÍNH SÁCH TRẢ - HOÀN TIỀN"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1_1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1_2"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1_3"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1_4"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1_5"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_1_6"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service__"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_2"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_2_1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_2_2"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_2_3"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service___"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_3"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_service_3_1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
