<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/fourth_gray"
    tools:context=".tinh.Activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="36sp"/>

    <LinearLayout
        android:id="@+id/inputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:background="@drawable/background_input"/>
        <TextView
            android:id="@+id/textErrorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="12dp"
            android:textColor="#FF0000"
            android:visibility="invisible"
            android:textSize="12sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/background_input"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/eyePassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/textErrorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="12dp"
            android:textColor="#FF0000"
            android:visibility="invisible"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/inputArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableRightCompat="@drawable/ic_move_muiten" />

    <TextView
        android:id="@+id/textSignUpAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_account"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:drawableRight="@drawable/ic_move_muiten"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textForgotPass"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/textForgotPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/progressBarStyleSmallInverse"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        android:layout_marginHorizontal="40dp"
        android:text="@string/login"
        android:background="@drawable/background_button"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/background_button_while"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_google"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continue with google"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:textColor="@color/primary_red"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>